frontend/tests/cases/positive/indexed/headAlt.gr
-- gr --no-eval

data Vec : Nat -> Type -> Type where
  Nil : forall {a : Type} . Vec 0 a;
  Cons : forall {a : Type, n : Nat} . a -> Vec n a -> Vec (n+1) a

headAlt : forall {a : Type, n : Nat} . {n > 0} => (Vec n Int) [0..1] -> Int
headAlt [Cons x _] = x

headAlt' : forall {a : Type, n : Nat} . {n > 1} => (Vec n Int) [0..1] -> Int
headAlt' = headAlt
